modified build script for start demon script after setup done and modified script for taking actual user name

--- a/vaani.service
+++ b/vaani.service
@@ -4,8 +4,8 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/home/raspberrypi/vaani/vaani
-WorkingDirectory=/home/raspberrypi/vaani
+ExecStart=/home/$USER/vaani/vaani
+WorkingDirectory=/home/$USER/vaani
 Restart=on-failure
 RestartSec=5
 
