--- a/vaani.service
+++ b/vaani.service
@@ -4,8 +4,8 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/home/$USER/vaani/vaani
-WorkingDirectory=/home/$USER/vaani
+ExecStart=/home/rpi/vaani/vaani
+WorkingDirectory=/home/rpi/vaani
 Restart=on-failure
 RestartSec=5
 
